[tool.poetry]
name = "nagios"
version = "0.1.0"
description = "Generate nagios configuration file from kong config file or txt file"
authors = ["Maximilinano Osorio <mosorio@isi.edu>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
